docs: update Swagger
