# docs/swagger.yaml
@@ -1,5 +1,79 @@
 basePath: /api
 definitions:
+  db.Status:
+    enum:
+    - IN_PROGRESS
+    - REJECTED
+    - ACCEPTED
+    type: string
+    x-enum-varnames:
+    - StatusINPROGRESS
+    - StatusREJECTED
+    - StatusACCEPTED
+  models.CreateJobApplicationReqBody:
+    properties:
+      companyName:
+        example: Evil Corp Inc.
+        type: string
+      dateApplied:
+        example: "2025-03-14T12:34:56Z"
+        type: string
+      jobPostingURL:
+        example: https://glassbore.com/jobs/swe420692137
+        type: string
+      jobTitle:
+        example: Software Engineer
+        type: string
+      maxSalary:
+        example: 70000
+        type: number
+      minSalary:
+        example: 50000
+        type: number
+      notes:
+        example: Follow up in two weeks
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/db.Status'
+        example: IN_PROGRESS
+    required:
+    - companyName
+    - dateApplied
+    - jobTitle
+    - status
+    type: object
+  models.CreateJobApplicationResBody:
+    properties:
+      companyName:
+        example: Evil Corp Inc.
+        type: string
+      dateApplied:
+        example: "2025-03-14T12:34:56Z"
+        type: string
+      id:
+        example: f4d15edc-e780-42b5-957d-c4352401d9ca
+        type: string
+      jobPostingURL:
+        example: https://glassbore.com/jobs/swe420692137
+        type: string
+      jobTitle:
+        example: Software Engineer
+        type: string
+      maxSalary:
+        example: 70000
+        type: number
+      minSalary:
+        example: 50000
+        type: number
+      notes:
+        example: Follow up in two weeks
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/db.Status'
+        example: IN_PROGRESS
+    type: object
   models.Error:
     properties:
       error:
@@ -135,6 +209,36 @@ paths:
       summary: Health check
       tags:
       - Health check
+  /job-applications:
+    post:
+      consumes:
+      - application/json
+      description: Processes and creates a new job application with the provided data
+      parameters:
+      - description: Job application details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateJobApplicationReqBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.CreateJobApplicationResBody'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Submit a new job application
+      tags:
+      - Job application
   /password/reset:
     post:
       consumes:
